--- a/index.html
+++ b/index.html
@@ -44,3 +44,4 @@ hhhh
     <li> jugar video juegos </li>
 </ol>
 <img src="assets/html.jpg" alt="aqui esta la imagen de una persona comodando los cables " width="500px">
+<a href="./contactos.html"><button>ingresar a contactos</button></a>
