--- a/index.html
+++ b/index.html
@@ -1,47 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ronny Astoyauri - Portafolio</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-hhhh
 <body>
-    
+
+  <!-- NAV -->
+  <nav>
+  <h1>Ronny</h1>
+  <ul>
+    <li><a href="index.html">Inicio</a></li>
+    <li><a href="sobre.html">Sobre Mí</a></li>
+    <li><a href="proyectos.html">Proyectos</a></li>
+    <li><a href="contacto.html">Contacto</a></li>
+  </ul>
+</nav>
+
+
+  <!-- HERO / INICIO -->
+  <header id="inicio" class="hero">
+    <div class="hero-text">
+      <h2>Ronny Astoyauri</h2>
+      <p>Estudiante de Desarrollo de Software</p>
+      <a href="#" class="btn">Descargar CV</a>
+    </div>
+    <div class="hero-img">
+      <img src="assets/html.jpg" alt="Foto de perfil" />
+    </div>
+  </header>
+
+  <!-- SOBRE MÍ -->
+  <section id="sobre-mi" class="card">
+    <h2>Sobre Mí</h2>
+    <p>Soy estudiante de APSTI y me gusta crear páginas web dinámicas y útiles.</p>
+  </section>
+
+  <!-- MÁS SECCIONES AQUÍ -->
+
+  <script src="script.js"></script>
 </body>
 </html>
-
-
-<h1>Mis datos personales</h1>
-<h2><i>Estos son mis datos generales:</i></h2>
-<ul>
-    <li> Mi nombre es <strong> roman astoyauri, ronny</strong></li>
-    <li>  </li>
-</ul>
-
-<h2><i>Mis hobies</i></h2>
-<ul>
-    <li> jugar futbol</li>
-    <li> jugar voley</li>
-    <li> juegos en linea</li>
-    <li> jugar ajedres</li>
-</ul>
-
-<h2><i>Mis pasatiempos</i></h2>
-<ol>
-    <li> escuchar musica</li>
-    <li> ver videos</li>
-    <li> salir con amigos</li>
-    <li> salir al campo</li>
-</ol>
-
-<h2><i>Mis actividades favoritas</i></h2>
-<ol>
-    <li> ir al gimnasio</li>
-    <li> Entrenar futbol</li>
-    <li> correr</li>
-    <li> dormir</li>
-    <li> jugar video juegos </li>
-</ol>
-<img src="assets/html.jpg" alt="aqui esta la imagen de una persona comodando los cables " width="500px">
