--- a/contacto.html
+++ b/contacto.html
@@ -4,8 +4,93 @@
   <meta charset="UTF-8">
   <title>Contacto - Ronny</title>
   <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav {
+      background-color: #333;
+      color: white;
+      padding: 10px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+    }
+
+    main {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 80vh;
+      background: #f0f0f0;
+      padding: 40px;
+    }
+
+    .contact-card {
+      background-color: white;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      width: 100%;
+      max-width: 400px;
+    }
+
+    .contact-card h2 {
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    .contact-card input,
+    .contact-card textarea {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
+
+    .contact-card button {
+      margin-top: 20px;
+      padding: 12px;
+      width: 100%;
+      background-color: #6a5acd;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .contact-card button:hover {
+      background-color: #5a4bb0;
+    }
+
+    .mensaje {
+      margin-top: 15px;
+      color: green;
+      text-align: center;
+      font-weight: bold;
+      display: none;
+    }
+  </style>
 </head>
 <body>
+
   <nav>
     <h1>Ronny</h1>
     <ul>
@@ -16,18 +101,43 @@
     </ul>
   </nav>
 
-  <main class="card">
-    <h2>Contacto</h2>
-    <p>¿Quieres trabajar conmigo o tienes alguna consulta?</p>
-    <form>
-      <label>Nombre:</label><br>
-      <input type="text" placeholder="Tu nombre" required><br><br>
-      <label>Correo:</label><br>
-      <input type="email" placeholder="tu@email.com" required><br><br>
-      <label>Mensaje:</label><br>
-      <textarea placeholder="Escribe tu mensaje aquí" required></textarea><br><br>
-      <button type="submit" class="btn">Enviar</button>
-    </form>
+  <main>
+    <div class="contact-card">
+      <h2>Contáctame</h2>
+      <form id="formularioContacto">
+        <input type="text" id="nombre" placeholder="Tu nombre" required>
+        <input type="email" id="correo" placeholder="Tu correo" required>
+        <textarea id="mensaje" placeholder="Escribe tu mensaje aquí..." rows="4" required></textarea>
+        <button type="submit">Enviar Mensaje</button>
+        <div class="mensaje" id="mensajeConfirmacion">¡Mensaje enviado correctamente!</div>
+      </form>
+    </div>
   </main>
+
+  <script>
+    const formulario = document.getElementById("formularioContacto");
+    const mensajeConfirmacion = document.getElementById("mensajeConfirmacion");
+
+    formulario.addEventListener("submit", function(event) {
+      event.preventDefault(); // Evita que recargue la página
+
+      // Validación simple
+      const nombre = document.getElementById("nombre").value.trim();
+      const correo = document.getElementById("correo").value.trim();
+      const mensaje = document.getElementById("mensaje").value.trim();
+
+      if (nombre && correo && mensaje) {
+        mensajeConfirmacion.style.display = "block";
+        formulario.reset();
+
+        setTimeout(() => {
+          mensajeConfirmacion.style.display = "none";
+        }, 3000);
+      } else {
+        alert("Por favor completa todos los campos.");
+      }
+    });
+  </script>
+
 </body>
 </html>
