--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- HERO / INICIO -->
   <header id="inicio" class="hero">
     <div class="hero-text">
-      <h2>Ronny Astoyauri</h2>
+      <h1>Ronny Astoyauri</h1>
       <p>Estudiante de Desarrollo de Software</p>
       <a href="#" class="btn">Descargar CV</a>
     </div>
@@ -39,7 +39,7 @@
   </section>
 
   <!-- MÁS SECCIONES AQUÍ -->
+<script src="scxript.js"></script>
 
-  <script src="script.js"></script>
 </body>
 </html>
