trabajo de sertificado

--- a/proyectos.html
+++ b/proyectos.html
@@ -134,5 +134,16 @@
     </div>
   </main>
 
+      <div class="card">
+        <a href="https://www.freecodecamp.org/certification/fcc-5aed3346-adc6-47c7-abed-3e4517f7442d/javascript-algorithms-and-data-structures-v8"></a>
+        <img src="assets/juego.jpg" alt="Juego en JS">
+        <div class="card-content">
+          <h3>Juego en JavaScript</h3>
+          <p>Un juego divertido para practicar eventos y lógica JS.</p>
+          <a href="#">Ver más</a>
+          </div>
+          </div>
+        </div>
+      </main>
 </body>
 </html>
