--- a/proyectos.html
+++ b/proyectos.html
@@ -135,15 +135,15 @@
   </main>
 
       <div class="card">
-        <a href="https://www.freecodecamp.org/certification/fcc-5aed3346-adc6-47c7-abed-3e4517f7442d/javascript-algorithms-and-data-structures-v8"></a>
-        <img src="assets/juego.jpg" alt="Juego en JS">
+        <a href="https://www.freecodecamp.org/certification/fcc-5aed3346-adc6-47c7-abed-3e4517f7442d/javascript-algorithms-and-data-structures-v8">
+        <img src="assets/juego.jpg" alt="sertificado de java scrip">
         <div class="card-content">
-          <h3>Juego en JavaScript</h3>
-          <p>Un juego divertido para practicar eventos y lógica JS.</p>
+          <h3>sertificado de java</h3>
+          <p>frecodecam</p>
           <a href="#">Ver más</a>
           </div>
-          </div>
-        </div>
+          </a>
+      </div>
       </main>
 </body>
 </html>
